--- a/index.html
+++ b/index.html
@@ -1,16 +1,34 @@
-<html>
-    <head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
     <script src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <h1>Simple Interest Calculator</h1>
-
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
-
-        <button onclick="compute()">Compute</button>
-    </body>
+    <title>Simple Interest Calculator</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h1>Simple Interest Calculator</h1>
+    <div class="maindiv">
+      Amount <input type="number" id="principal" /> <br />
+      Rate
+      <input
+        type="range"
+        id="rate"
+        min="1"
+        max="100"
+        defaultValue="10.25"
+        onchange="updateRate()"
+      />
+      <span id="rate_val">10.25 %</span><br />
+      No. of Years
+      <select id="years">
+        <option value="1">1</option>
+        <!-- fill in the rest of the values-->
+      </select>
+      <br />
+      Interest : <span id="result"></span><br />
+      <button onclick="validateInput()">Compute Interest</button>
+      <span id="result"> </span>
+    </div>
+  </body>
+  <footer>&#169; This Calculator belongs to Alan Guan</footer>
 </html>
